--- a/src/AngularProject/src/app/components/navigation/navigation.component.html
+++ b/src/AngularProject/src/app/components/navigation/navigation.component.html
@@ -5,7 +5,7 @@
       <button class="nav-btn" routerLink="">Home</button>
       <button class="nav-btn">Courses</button>
       <button class="nav-btn">Coaches</button>
-      <button class="nav-btn">Profile</button>
+      <button class="nav-btn" routerLink="profile">Profile</button>
     </nav>
   
     <div id="log-btns" *ngIf="!isLoggedIn">
