--- a/src/AngularProject/src/app/components/navigation/navigation.component.html
+++ b/src/AngularProject/src/app/components/navigation/navigation.component.html
@@ -18,7 +18,6 @@
     </button>
 </div>
 
-<app-header></app-header>
+<!-- <app-header></app-header> -->
   
 <!-- <app-sidebar-menu [isOpen]="isMenuOpen" (menuClosed)="onMenuClosed()"></app-sidebar-menu> -->
-<app-footer></app-footer>
