--- a/src/AngularProject/src/app/pages/signup/signup.page.scss
+++ b/src/AngularProject/src/app/pages/signup/signup.page.scss
@@ -26,6 +26,14 @@
   text-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
+#confirm{
+  background: #f2f2f2;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  color: #EA2839;
+  border-color: transparent;
+}
+
 .form-container {
   padding: 20px;
   background: #f2f2f2;
