--- a/src/AngularProject/src/app/pages/login/login.page.scss
+++ b/src/AngularProject/src/app/pages/login/login.page.scss
@@ -42,7 +42,7 @@ form {
 }
 
 label {
-  font-size: 14px;
+  font-size: 16px;
   font-weight: bold;
   color: #333;
 }
@@ -110,7 +110,7 @@ input:focus {
   background: transparent;
 }
 
-#sign-btn:hover {
+#sign-btn:hover, .sign-btn:hover {
   color: #b71c1c;
   text-decoration: underline;
 }
