--- a/src/AngularProject/src/app/pages/signup/signup.page.scss
+++ b/src/AngularProject/src/app/pages/signup/signup.page.scss
@@ -48,7 +48,7 @@ form {
 }
 
 label {
-  font-size: 14px;
+  font-size: 16px;
   font-weight: bold;
   color: #333;
 }
@@ -108,8 +108,12 @@ input:focus {
 
 .error-message {
   color: #EA2839;
-  font-size: 10px;
+  font-size: 14px;
   margin: 0;
+}
+
+.error-input{
+  box-shadow: 0px 0px 6px #EA2839 inset;
 }
 
 #login-btn{
