payment buttons, header elements position fix
add buttons with specific amount of money (only layout, no functionality)
balance positioning fix

--- a/src/AngularProject/src/app/components/navigation/navigation.component.scss
+++ b/src/AngularProject/src/app/components/navigation/navigation.component.scss
@@ -79,3 +79,10 @@ body{
     width: 16px;
     height: 16px;
   }
+
+
+.navigation-logged-in {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
