--- a/src/AngularProject/src/app/components/navigation/navigation.component.html
+++ b/src/AngularProject/src/app/components/navigation/navigation.component.html
@@ -8,23 +8,22 @@
     <button class="nav-btn" routerLink="profile">Profile</button>
   </nav>
   
-  
-  <button *ngIf="isLoggedIn" class="nav-btn" id="balance" routerLink="payment">
-    {{MoneyBalance}},-
-    <img src="assets/icons/robucks.svg" alt="money" class="icon" />
-  </button>
-  
-
   <div id="log-btns" *ngIf="!isLoggedIn">
     <button id="login-btn" class="nav-btn" routerLink="login">Log in</button>
     <button id="signup-btn" class="nav-btn" routerLink="signup">Sign up</button>
   </div>
   
 
-  <div *ngIf="isLoggedIn" id="logout-btn">
-    <button class="nav-btn" (click)="logout()">
-      Log out
+  <div *ngIf="isLoggedIn" class="navigation-logged-in">
+    <button class="nav-btn" id="balance" routerLink="payment">
+      {{MoneyBalance}},-
+      <img src="assets/icons/robucks.svg" alt="money" class="icon" />
     </button>
+    <div id="logout-btn">
+      <button class="nav-btn" (click)="logout()">
+        Log out
+      </button>
+    </div>
   </div>
 </div>
 
