--- a/src/AngularProject/src/app/pages/main-page/main-page.component.html
+++ b/src/AngularProject/src/app/pages/main-page/main-page.component.html
@@ -39,6 +39,22 @@
     </section>
     <section class="scroll-section-content">
       <div class="container-back">
+        <!-- <app-cource *ngFor="let course of courses"></app-cource> -->
+        <div class="d-flex flex-wrap gap-3 justify-content-center">
+          <app-cource></app-cource>
+          <app-cource></app-cource>
+          <app-cource></app-cource>
+          <app-cource></app-cource>
+          <app-cource></app-cource>
+          <app-cource></app-cource>
+          <app-cource></app-cource>
+          <app-cource></app-cource>
+
+        </div>
+      </div>  
+    </section>
+    <section class="scroll-section-content">
+      <div class="container-back">
         <app-calendar></app-calendar>
       </div>  
     </section>
