--- a/src/AngularProject/src/app/components/cource/cource.component.html
+++ b/src/AngularProject/src/app/components/cource/cource.component.html
@@ -6,7 +6,7 @@
         <h5 class="card-title">Yoga</h5>
         <div class="d-flex">
             <div class="">
-                <a class="btn buy" href="#">Push Right on md+</a>
+                <a class="btn buy" href="#">Reserve</a>
             </div>
             <div class="ms-sm-auto">
                 <a class="btn info" href="#">More info</a>
