--- a/src/AngularProject/src/app/components/cource/cource.component.scss
+++ b/src/AngularProject/src/app/components/cource/cource.component.scss
@@ -15,8 +15,8 @@
 .image-wrapper img {
     width: 100%;
     height: 100%;
-    object-fit: cover; /* Crops to fill */
-    object-position: center; /* Centered crop */
+    object-fit: cover;
+    object-position: center;
 }
 
 .buy{
