--- a/src/AngularProject/src/app/components/course/course.component.scss
+++ b/src/AngularProject/src/app/components/course/course.component.scss
@@ -1,6 +1,8 @@
 .card{
     background: #f2f2f2;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    height: 305px;
+    width: 305px;
 }
 
 .card-title{
@@ -17,6 +19,10 @@
     height: 100%;
     object-fit: cover;
     object-position: center;
+}
+
+.d-flex{
+    margin-top: auto;
 }
 
 .buy{
