Styles and nav hotfix & test data for courses

--- a/src/AngularProject/src/app/components/calendar/calendar.component.scss
+++ b/src/AngularProject/src/app/components/calendar/calendar.component.scss
@@ -1,8 +1,9 @@
 .calendar-container {
   display: flex;
-  height: 100vh;
+  //height: 100vh;
   font-family: Arial, sans-serif;
   color: #333;
+  padding: 20pt;
 }
 
 .calendar-sidebar {
