--- a/src/AngularProject/src/app/components/navigation/navigation.component.html
+++ b/src/AngularProject/src/app/components/navigation/navigation.component.html
@@ -2,8 +2,9 @@
   <a id="logo" class="btn" routerLink="">REZERVACE+</a>
 
   <nav id="navigation-bar">
-    <a class="nav-btn btn" routerLink="">Home</a>
-    <a class="nav-btn btn">Courses</a>
+    <a class="nav-btn btn" href="#" routerLink="">Home</a>
+    <a class="nav-btn btn" href="#calendar">My calendar</a>
+    <a class="nav-btn btn" href="#courses">Courses</a>
     <a class="nav-btn btn">Coaches</a>
     <a class="nav-btn btn" routerLink="/profile">Profile</a>
   </nav>
