--- a/src/AngularProject/src/app/pages/login/login.page.html
+++ b/src/AngularProject/src/app/pages/login/login.page.html
@@ -2,7 +2,7 @@
 <a id="logo" routerLink="">REZERVACE+</a>
 
 <div id="login-block">
-    <div id="login">Login</div>
+    <div class="header">Login</div>
     <div class="form-container">
         <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
 
