--- a/src/AngularProject/src/app/pages/main-page/main-page.component.html
+++ b/src/AngularProject/src/app/pages/main-page/main-page.component.html
@@ -1,7 +1,7 @@
 <div class="scroll-container">      
     <section class="scroll-section after-video">
         <app-navigation style="position: absolute; z-index:20; width: 100%"></app-navigation>
-        <div class="video-wrapper">
+        <div class="video-wrapper" id="top">
           <video
             #bgVideo
             class="video"
@@ -39,6 +39,9 @@
     </section>
     <section class="scroll-section-content">
       <div class="container-back">
+        <div id="courses" class="header-main">
+          Courses
+        </div>
         <div class="d-flex flex-wrap gap-3 justify-content-center">
           <app-cource *ngFor="let course of courses" [course]="course"></app-cource>
         </div>
@@ -46,10 +49,10 @@
     </section>
     <section class="scroll-section-content">
       <div class="container-back">
-        <app-calendar></app-calendar>
+        <app-calendar id="calendar"></app-calendar>
+        <footer>
+          <app-footer />
+        </footer>
       </div>  
-    </section>
-    <section class="scroll-section">
-        <app-footer></app-footer>
     </section>
 </div>  
