--- a/src/AngularProject/src/app/pages/signup/signup.page.html
+++ b/src/AngularProject/src/app/pages/signup/signup.page.html
@@ -2,7 +2,7 @@
 <a id="logo" routerLink="">REZERVACE+</a>
 
 <div id="signup-block">
-    <div id="create">Create an account</div>
+    <div class="header">Create an account</div>
 
     <div id="confirm" *ngIf="showVerifyMessage" class="alert alert-info">
         Please, check your email for verification
