--- a/src/AngularProject/src/styles.scss
+++ b/src/AngularProject/src/styles.scss
@@ -15,6 +15,7 @@ html, body {
     overflow: auto;
     scrollbar-width: none;       /* Firefox */
     -ms-overflow-style: none;    /* IE 10+ */
+    scroll-behavior: smooth;
   }
   
   /* Chrome, Safari, Edge */
@@ -26,3 +27,22 @@ html, body {
     
   }
   
+.header-main{
+  font-family: 'Source Sans 3';
+  font-size: 24pt;
+  font-weight: bold;
+  color: black;
+  padding: 20pt;
+  padding-bottom: 10pt;
+  text-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.header{
+  font-family: 'Source Sans 3';
+  font-size: 24pt;
+  font-weight: bold;
+  color: black;
+  margin-top: 5.5vh;
+  margin-bottom: 1vh;
+  text-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
