login & signup pages style hotfix

--- a/src/AngularProject/src/app/pages/login/login.page.html
+++ b/src/AngularProject/src/app/pages/login/login.page.html
@@ -1,5 +1,5 @@
 <app-navigation />
-<a id="logo" routerLink="">REZERVACE+</a>
+<!-- <a id="logo" routerLink="">REZERVACE+</a> -->
 
 <div id="login-block">
     <div class="header">Login</div>
