--- a/src/AngularProject/src/app/pages/signup/signup.page.html
+++ b/src/AngularProject/src/app/pages/signup/signup.page.html
@@ -1,5 +1,5 @@
 <app-navigation />
-<a id="logo" routerLink="">REZERVACE+</a>
+<!-- <a id="logo" routerLink="">REZERVACE+</a> -->
 
 <div id="signup-block">
     <div class="header">Create an account</div>
