--- a/src/AngularProject/src/app/pages/profile/profile.page.html
+++ b/src/AngularProject/src/app/pages/profile/profile.page.html
@@ -60,7 +60,8 @@
       </p>
 
       <button type="submit" class="form-button">Reset</button>
-      <button type="button" class="form-button danger" (click)="onDeleteAccount()">Delete Account</button>
+      <!-- <button type="button" class="form-button danger" (click)="onDeleteAccount()">Delete Account</button> -->
+      <button type="button" class="form-button danger">Delete Account</button>
     </form>
 
     <!-- 📚 User Courses -->
