--- a/src/AngularProject/src/app/pages/course-page/course-page.component.html
+++ b/src/AngularProject/src/app/pages/course-page/course-page.component.html
@@ -2,6 +2,7 @@
 
 <div class="section-content">    
     <div *ngIf="course" class="container-back">
+        <img src="https://tse3.mm.bing.net/th?id=OIG2.5bowY.5mQdQKTIv5qY1g&pid=ImgGn">
         <div class="header-main">
             {{ course.serviceName }}
         </div>
