--- a/src/AngularProject/src/app/pages/reset-pass/reset-pass.component.html
+++ b/src/AngularProject/src/app/pages/reset-pass/reset-pass.component.html
@@ -1,7 +1,7 @@
 <a id="logo" routerLink="">REZERVACE+</a>
 
 <div id="restore-block">
-    <div id="restore">Forgot a password?</div>
+    <div id="restore">Set a new password</div>
     <div class="form-container">
         <form [formGroup]="resetForm" (ngSubmit)="onSubmit()">
             <label for="password">Password 
