--- a/src/AngularProject/src/app/pages/forget-pass/forget-pass.component.scss
+++ b/src/AngularProject/src/app/pages/forget-pass/forget-pass.component.scss
@@ -25,6 +25,14 @@
     margin-bottom: 1vh;
     text-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   }
+
+  #confirm{
+    background: #f2f2f2;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    color: #EA2839;
+    border-color: transparent;
+  }
   
   .form-container {
     max-width: 400px;
