--- a/src/AngularProject/src/app/pages/reset-pass/reset-pass.component.html
+++ b/src/AngularProject/src/app/pages/reset-pass/reset-pass.component.html
@@ -42,6 +42,10 @@
                 <button id="submit" type="submit" class="sign-up-btn">Reset a password</button>
             </div>
 
+            <div class="container" *ngIf="tryToLogin">
+                <a id="submit" class="sign-up-btn btn" href="/login" routerLink="login">Login</a>
+            </div>
+
             <!-- <div class="container justify-content-center" *ngIf="loginError">
                 <p class="text-danger">
                     {{ loginError }}
