--- a/src/AngularProject/src/app/pages/course-page/course-page.component.html
+++ b/src/AngularProject/src/app/pages/course-page/course-page.component.html
@@ -1,39 +1,51 @@
 <app-navigation />
 
-<div class="section-content">    
+<div class="section-content">
     <div *ngIf="course" class="container-back">
-        <img src="https://tse3.mm.bing.net/th?id=OIG2.5bowY.5mQdQKTIv5qY1g&pid=ImgGn">
-        <div class="header-main">
-            {{ course.serviceName }}
+  
+      <!-- Слайдер изображений -->
+      <div class="image-slider">
+        <button class="slider-button left" (click)="prevImage()">
+          <span>&#10094;</span>
+        </button>
+      
+        <img [src]="currentImage" alt="Course image" class="slider-image" />
+      
+        <button class="slider-button right" (click)="nextImage()">
+          <span>&#10095;</span>
+        </button>
+      </div>
+      
+  
+      <!-- Content container matching the image width -->
+      <div class="content-container">
+        <!-- Информация о курсе и тренере -->
+        <div class="info-row">
+          <div class="left-info justify-content-left">
+            <div class="info">{{ course.serviceName }}</div>
+            <div><i class="fa-regular fa-calendar"></i> {{ course.start | date:'dd.MM.yyyy' }}</div>
+            <div><i class="fa-regular fa-clock"></i> {{ course.start | date:'HH:mm' }} - {{ course.end | date:'HH:mm' }}</div>
+            <div><i class="fa-solid fa-door-open"></i> Room: {{ course.roomName }}</div>
+  
+            <div><i class="fa-solid fa-user-group"></i> Spots available: {{ course.currentCapacity }}/{{ course.totalCapacity }}</div>
+            <div><i class="fa-solid fa-dollar-sign"></i> Price: {{ course.price }}</div>
+            <button class="btn enroll">Enroll</button>
+          </div>
+  
+          <div class="right-info justify-content-right">
+            <div class="coach-tag">Coach:</div>
+            <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Trainer" class="coach-image" />
+            <div class="coach-name">{{ trainer || 'Coach name' }}</div>
+          </div>
         </div>
-        <div class="main-info">
-            <div *ngIf="trainer">
-                Trainer: {{ trainer }}
-            </div>
-            <!-- <div>
-                Start at {{ course.start | date:'HH:mm, dd.MM.yyyy' }}
-            </div>
-            <div>
-                End at {{ course.end | date:'HH:mm, dd.MM.yyyy' }}
-            </div> -->
-            <div>
-                {{ course.start | date:'dd.MM.yyyy' }}
-            </div>
-            <div>
-                {{ course.start | date:'HH:mm' }} - {{ course.end | date:'HH:mm' }}
-            </div>
-            <div>
-                {{ course.roomName }}
-            </div>
-            <div>
-                Price: {{ course.price }}
-            </div>
-            <div>
-                Spots available {{ course.currentCapacity }}/{{ course.totalCapacity }}
-            </div>
-        </div>
-        <button class="btn">Enroll</button>
+  
+        <!-- Описание курса -->
+        <!-- <div class="course-description">
+          <h2>About the course</h2>
+          <p>Description</p>
+        </div> -->
+      </div>
     </div>
-</div>
+  </div>
 
 <app-footer />
