--- a/src/AngularProject/src/app/pages/course-page/course-page.component.html
+++ b/src/AngularProject/src/app/pages/course-page/course-page.component.html
@@ -23,12 +23,30 @@
         <div class="info-row">
           <div class="left-info justify-content-left">
             <div class="info">{{ course.serviceName }}</div>
-            <div><i class="fa-regular fa-calendar"></i> {{ course.start | date:'dd.MM.yyyy' }}</div>
-            <div><i class="fa-regular fa-clock"></i> {{ course.start | date:'HH:mm' }} - {{ course.end | date:'HH:mm' }}</div>
-            <div><i class="fa-solid fa-door-open"></i> Room: {{ course.roomName }}</div>
-  
-            <div><i class="fa-solid fa-user-group"></i> Spots available: {{ course.currentCapacity }}/{{ course.totalCapacity }}</div>
-            <div><i class="fa-solid fa-dollar-sign"></i> Price: {{ course.price }}</div>
+            <div>
+                <svg xmlns="http://www.w3.org/2000/svg" width="16pt" height="16pt" fill="currentColor" class="bi bi-calendar">
+                <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z"/>
+                </svg>{{ course.start | date:'dd.MM.yyyy' }}
+            </div>
+            <div>
+                <svg xmlns="http://www.w3.org/2000/svg" width="16pt" height="16pt" fill="currentColor" class="bi bi-clock">
+                    <path d="M8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71z"/>
+                    <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16m7-8A7 7 0 1 1 1 8a7 7 0 0 1 14 0"/>
+                </svg>{{ course.start | date:'HH:mm' }} - {{ course.end | date:'HH:mm' }}</div>
+            <div><svg xmlns="http://www.w3.org/2000/svg" width="16pt" height="16pt" fill="currentColor" class="bi bi-door-open">
+                <path d="M8.5 10c-.276 0-.5-.448-.5-1s.224-1 .5-1 .5.448.5 1-.224 1-.5 1"/>
+                <path d="M10.828.122A.5.5 0 0 1 11 .5V1h.5A1.5 1.5 0 0 1 13 2.5V15h1.5a.5.5 0 0 1 0 1h-13a.5.5 0 0 1 0-1H3V1.5a.5.5 0 0 1 .43-.495l7-1a.5.5 0 0 1 .398.117M11.5 2H11v13h1V2.5a.5.5 0 0 0-.5-.5M4 1.934V15h6V1.077z"/>
+              </svg>Room: {{ course.roomName }}
+            </div>
+            <div><svg xmlns="http://www.w3.org/2000/svg" width="16pt" height="16pt" fill="currentColor" class="bi bi-person-lines-fill">
+                <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5 6s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zM11 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5m.5 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1zm2 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1zm0 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1z"/>
+              </svg>Spots available: {{ course.currentCapacity }}/{{ course.totalCapacity }}
+            </div>
+            <div>
+                <svg xmlns="http://www.w3.org/2000/svg" width="16pt" height="16pt" fill="currentColor" class="bi bi-currency-dollar">
+                <path d="M4 10.781c.148 1.667 1.513 2.85 3.591 3.003V15h1.043v-1.216c2.27-.179 3.678-1.438 3.678-3.3 0-1.59-.947-2.51-2.956-3.028l-.722-.187V3.467c1.122.11 1.879.714 2.07 1.616h1.47c-.166-1.6-1.54-2.748-3.54-2.875V1H7.591v1.233c-1.939.23-3.27 1.472-3.27 3.156 0 1.454.966 2.483 2.661 2.917l.61.162v4.031c-1.149-.17-1.94-.8-2.131-1.718zm3.391-3.836c-1.043-.263-1.6-.825-1.6-1.616 0-.944.704-1.641 1.8-1.828v3.495l-.2-.05zm1.591 1.872c1.287.323 1.852.859 1.852 1.769 0 1.097-.826 1.828-2.2 1.939V8.73z"/>
+                </svg>Price: {{ course.price }}
+            </div>
             <button class="btn enroll">Enroll</button>
           </div>
   
