--- a/src/AngularProject/src/app/pages/verification/verification.component.html
+++ b/src/AngularProject/src/app/pages/verification/verification.component.html
@@ -4,14 +4,15 @@
         <div class="text">Press button bellow to verify your email.</div>
         <div id="confirm" *ngIf="verified" class="alert alert-info">
             Email is verified. You can log in and use our service!
-          </div>
-        <div class="row row-cols-1 row-cols-md-2 g-3">
-            <div class="col d-grid">
-                <button id="submit" type="submit" (click)="submit()" class="col verify-btn sign-up-btn">Verify an account</button>
-            </div>
-            <div class="col d-grid" *ngIf="verified">
-                <a id="login" class="col verify-btn btn" href="/login" routerLink="login">Log in</a>
-            </div>
+        </div>
+        <div id="err" *ngIf="bad" class="alert alert-danger">
+            {{ error }}
+        </div>
+        <div class="col d-grid" *ngIf="btn">
+            <button id="submit" type="submit" (click)="submit()" class="col verify-btn sign-up-btn">Verify an account</button>
+        </div>
+        <div class="col d-grid" *ngIf="verified">
+            <a id="login" class="col verify-btn btn" href="/login" routerLink="login">Log in</a>
         </div>
     </div>
 </div>
